# Kafka-Lite

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.json  config.json  generate_graphs.py  test_consumer.py  test_producer.py
benchmark/: benchmark_batch.py  benchmark_continuous.py  benchmark_producer.py  run_all_benchmarks.py
dashboard/: server.py
dashboard/public/: index.html  script.js  style.css
docs/: Architecture.md  Benchmark.md  ConsumerGroups.md  Protocol.md  Storage.md
include/: Broker.h  Config.h  ConfigManager.h  ConsumerGroupManager.h  HeartbeatManager.h  LogSegment.h  Logger.h  Message.h  MetricsManager.h  OffsetManager.h  Partition.h  RetentionManager.h  TcpServer.h  ThreadPool.h  Topic.h  TopicManager.h
src/: main.cpp
src/broker/: Broker.cpp
src/config/: ConfigManager.cpp
src/consumer/: ConsumerGroupManager.cpp  HeartbeatManager.cpp  OffsetManager.cpp
src/logging/: Logger.cpp
src/metrics/: MetricsManager.cpp
src/network/: TcpServer.cpp
src/retention/: RetentionManager.cpp
src/storage/: LogSegment.cpp  Partition.cpp
src/topic/: Topic.cpp  TopicManager.cpp
tests/: test_consumer_groups.py  test_partitioning.py
